--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,19 @@
+.page{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
+
+
 .head {
     background: #fc0;
+    border-radius: 50px;
     height: 100px;
     position: relative;
     width: 100px;
+    
   }
   .face {
     font-family: 'courier new', serif;
